--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
 </head>
 <body>
 <h1>Indu Sri Kunuguntla</h1>
-<H1> Indu Sri </H1>
 <H6> National Museum Delhi </H6>
 <p>
 One of the largest museums of India, <b> National Museum </b> has diverse articles from the magnificent ancient era. 
 It was constructed in 1949 on the corner of Janpath in the lively city of Delhi. It is a best place to visit as one gets to know about the luxury coaches of trains, which were a long time back used by the great kings. 
 It houses a variety of collections that include jewellery, paintings, armors, decorative arts and manuscripts. There is also a Buddhist section where one can find head of a ,<b>Buddha statue</b>, and <b>Buddha Stupa</b> having remnants of Gautam Buddha, constructed in 3rd century BCE by Sovereign Ashoka.
 </p>
+<hr></hr>
+<h3> Ordered List</h3>
+<h4>Indira Gandhi International Airport</h4>
+<ol>
+     <li>The distance between Delhi Airport and National Museum is 14 km.</li>
+     <li>The best way to travel from airport to Museum is by Taxi which takes 20 mins.</li>
+</ol>
+<h2>Surrounded locations near to museum</h2>
+<ul>
+    <li>India Gate</li>
+    <li>Rashtrapati Bhavan</li>
+    <li>Jantar mantar</li>
+    <li>Humayun's Tomb</li>
+    <ol>
+    <li>Taj Mahal</li>
+        <ol>
+        <li>Jama Masjid</li>
+        <li>Yamuna River</li>
+        </ol>
+    </ol>
+</ul>
 </body>
 </html>
