Added aboume in index.html

--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@ It houses a variety of collections that include jewellery, paintings, armors, de
         </ol>
     </ol>
 </ul>
+<a href="aboutme.html">aboutme.html</a>
 </body>
 </html>
