--- a/index.html
+++ b/index.html
@@ -33,5 +33,29 @@ It houses a variety of collections that include jewellery, paintings, armors, de
     </ol>
 </ul>
 <a href="aboutme.html">aboutme.html</a>
+<hr></body>hr>
+<h5>Tables</h5>
+<table>
+    <tr>
+        <th>City Name</th>
+        <th>Location to visit</th>
+        <th>Time to Spend</th>
+    </tr>
+    <tr>
+        <td>New York</td>
+        <td>Statue of Liberty</td>
+        <td>1 hour</td>
+    </tr>
+    <tr>
+        <td>Los Vegas</td>
+        <td>Casino</td>
+        <td>4 hours</td>
+    </tr>
+    <tr>
+        <td>Texas</td>
+        <td>Beaches</td>
+        <td>3 hours</td>
+    </tr>
+</table>
 </body>
 </html>
