--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head> 
+    <style>
+        table, th, td {
+          border: 1px solid black;
+          border-collapse: collapse;
+        }
+        </style>
 <title> LAB-03 Assignment </title>
 </head>
 <body>
@@ -33,6 +39,7 @@ It houses a variety of collections that include jewellery, paintings, armors, de
     </ol>
 </ul>
 <a href="aboutme.html">aboutme.html</a>
+
 <hr></body>hr>
 <h5>Tables</h5>
 <table>
