--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ It houses a variety of collections that include jewellery, paintings, armors, de
 </ul>
 <a href="aboutme.html">aboutme.html</a>
 
-<hr></body>hr>
+<hr></body></hr>
 <h5>Tables</h5>
 <table>
     <tr>
