--- a/index.html
+++ b/index.html
@@ -40,8 +40,24 @@ It houses a variety of collections that include jewellery, paintings, armors, de
 </ul>
 <a href="aboutme.html">aboutme.html</a>
 
-<hr></body></hr>
-<h5>Tables</h5>
+<hr></hr>
+
+<table>
+    <h4>Tables</h4>
+
+    <tr>
+        <th>Delhi</th>
+        <th>Pune</th>
+        <th>Hyderabad</th>
+        <th>Chennai</th>
+    </tr>
+    <tr>
+        <td>Delhi consists of Taj Mahal and it was built by Shah Jahan</td>
+        <td>Pune is widely regarded to be the second major It hub and the most important automobile and manufacturing hub of India</td>
+        <td>Hyderabad have Charminar and Golconda</td>
+        <td>Chennai is famous for Temples,beautiful beaches,waterfalls and parks</td>
+    </tr>    
+</table>
 <table>
     <tr>
         <th>City Name</th>
@@ -64,5 +80,7 @@ It houses a variety of collections that include jewellery, paintings, armors, de
         <td>3 hours</td>
     </tr>
 </table>
+<hr></hr>
+
 </body>
 </html>
