added paragraph related to table information

--- a/index.html
+++ b/index.html
@@ -44,21 +44,7 @@ It houses a variety of collections that include jewellery, paintings, armors, de
 
 <table>
     <h4>Tables</h4>
-
-    <tr>
-        <th>Delhi</th>
-        <th>Pune</th>
-        <th>Hyderabad</th>
-        <th>Chennai</th>
-    </tr>
-    <tr>
-        <td>Delhi consists of Taj Mahal and it was built by Shah Jahan</td>
-        <td>Pune is widely regarded to be the second major It hub and the most important automobile and manufacturing hub of India</td>
-        <td>Hyderabad have Charminar and Golconda</td>
-        <td>Chennai is famous for Temples,beautiful beaches,waterfalls and parks</td>
-    </tr>    
-</table>
-<table>
+    <p>The below table shows the information about cities and locations to visit in that city</p>
     <tr>
         <th>City Name</th>
         <th>Location to visit</th>
