added code fencing

--- a/index.html
+++ b/index.html
@@ -67,6 +67,19 @@ It houses a variety of collections that include jewellery, paintings, armors, de
     </tr>
 </table>
 <hr></hr>
+<h4>Code Fencing</h4>
+<blockquote cite="https://stackoverflow.com/questions/13170819/what-is-htaccess-file">what is .htaccess file</blockquote>
+
+<a href="https://stackoverflow.com/q/13170819">Snippet Source Link</a>
+
+<pre> 
+    AuthName "Member's Area Name"  
+    AuthUserFile /path/to/password/file/.htpasswd  
+    AuthType Basic  
+    require valid-user  
+    ErrorDocument 401 /error_pages/401.html  
+    AddHandler server-parsed .html  
+</pre>
 
 </body>
 </html>
