--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <title> LAB-03 Assignment </title>
 </head>
 <body>
+
+    <a href="bonus.html">BONUS</a>
 <h1>Indu Sri Kunuguntla</h1>
 <H6> National Museum Delhi </H6>
 <p>
