--- a/bonus.html
+++ b/bonus.html
@@ -17,7 +17,7 @@
 
 <img src="Kangaroo.jpg" width="200" height="200">
 
-<a href="index.html"></a>
+<a href="index.html">INDEX</a>
 </body>
 </html>
 </body>
